--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 	font-family: 'IBM Plex Serif', serif;
 }
 body,html{
-	background: black;
+	background-color: black;
   	height: 100%;
 	width: 100%;
 }
@@ -22,16 +22,37 @@ header{
   	transform: translateX(-50%) translateY(-10%);
 
   	text-align: center;
-
 }
 
 .Body{
-	border: 1px solid red;
 	width: 100%;
-	display: flex;
-	justify-content: center;
 }
 
-.Body ~ div{
-	border: 1px solid white;
+.Body div{
+	margin-left: auto ;
+	margin-right: auto ;
+	width: 90%;
+	max-width: 800px;
+	margin-top: 100px;
+	margin-bottom: 100px;
+}
+
+#profileImg{
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	object-fit: cover;
+}
+
+.Projects ul{
+	list-style-position: inside;
+	padding: 10px;
+}
+
+.Projects ul > ul {
+    margin-left: 10px;
+}
+
+.About{
+	text-align: justify;
 }
