--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,11 @@ header{
     margin-left: 10px;
 }
 
+.Projects ul > ul > li {
+	/* margin-top: 5px; */
+	margin-bottom: 10px;
+}
+
 .About{
 	text-align: justify;
 }
