--- a/src/index.css
+++ b/src/index.css
@@ -14,27 +14,59 @@ body,html{
 header{
 	padding: 20px;
   	width: 80%;
-  	max-width: 450px;
-  
+  	max-width: 650px;
 	position: absolute;
   	top: 10%;
   	left: 50%;
   	transform: translateX(-50%) translateY(-10%);
-
   	text-align: center;
 }
+
+header h1 {
+	font-size: 66px;
+	font-weight: lighter;
+	letter-spacing: 4px;
+}
+
+header p {
+	font-size: 20px;
+}
+
 
 .Body{
 	width: 100%;
 }
 
-.Body div{
+.Body .Section{
 	margin-left: auto ;
 	margin-right: auto ;
-	width: 90%;
-	max-width: 800px;
 	margin-top: 100px;
 	margin-bottom: 100px;
+}
+
+div#Projects.Section{
+	width: 90%;
+	max-width: 800px;
+}
+
+div#About.Section{
+	width: 70%;
+	max-width: 500px;
+}
+
+div#Skills.Section{
+	width: 70%;
+	max-width: 500px;
+}
+
+#Projects .Content{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+}
+.Project{
+	text-align: center;
 }
 
 #profileImg{
@@ -44,20 +76,45 @@ header{
 	object-fit: cover;
 }
 
-.Projects ul{
-	list-style-position: inside;
-	padding: 10px;
+.hexagon {
+    overflow: hidden;
+    visibility: hidden;
+    -webkit-transform: rotate(120deg);
+       -moz-transform: rotate(120deg);
+        -ms-transform: rotate(120deg);
+         -o-transform: rotate(120deg);
+            transform: rotate(120deg);
+    width: 200px;
+    height: 100px;
+}
+.hexagon-in1 {
+    overflow: hidden;
+    width: 100%;
+	height: 100%;
+    -webkit-transform: rotate(-60deg);
+       -moz-transform: rotate(-60deg);
+        -ms-transform: rotate(-60deg);
+         -o-transform: rotate(-60deg);
+            transform: rotate(-60deg);
+}
+.hexagon-in2 {
+	/* background-color: rgba(255, 255, 255, 1); */
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+	background-position: 50%;
+	background-size: 40%;
+    background-image: url(./assets/icons/ML.svg);
+    visibility: visible;
+    -webkit-transform: rotate(-60deg);
+       -moz-transform: rotate(-60deg);
+        -ms-transform: rotate(-60deg);
+         -o-transform: rotate(-60deg);
+            transform: rotate(-60deg);
 }
 
-.Projects ul > ul {
-    margin-left: 10px;
+.Project{
+	cursor: pointer;
 }
 
-.Projects ul > ul > li {
-	/* margin-top: 5px; */
-	margin-bottom: 10px;
-}
 
-.About{
-	text-align: justify;
-}
