--- a/src/index.css
+++ b/src/index.css
@@ -11,25 +11,31 @@ body,html{
 	width: 100%;
 }
 
+p{
+	font-size: calc(18px + 0.2vw);
+}
+
 header{
 	padding: 20px;
-  	width: 80%;
+  	width: 90%;
   	max-width: 650px;
 	position: absolute;
   	top: 10%;
   	left: 50%;
   	transform: translateX(-50%) translateY(-10%);
-  	text-align: center;
+	  text-align: center;
+	  /* background-color: blue; */
 }
 
 header h1 {
-	font-size: 66px;
+	font-size: calc(30px + 1.5vw);
+	/* 66px */
 	font-weight: lighter;
 	letter-spacing: 4px;
 }
 
 header p {
-	font-size: 20px;
+	font-size: calc(12px + 0.5vw);
 }
 
 
@@ -45,7 +51,7 @@ header p {
 }
 
 div#Projects.Section{
-	width: 90%;
+	width: 80%;
 	max-width: 800px;
 }
 
@@ -70,6 +76,9 @@ div#Skills.Section{
 }
 
 #profileImg{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 	width: 100px;
 	height: 100px;
 	border-radius: 50%;
@@ -95,26 +104,53 @@ div#Skills.Section{
        -moz-transform: rotate(-60deg);
         -ms-transform: rotate(-60deg);
          -o-transform: rotate(-60deg);
-            transform: rotate(-60deg);
+			transform: rotate(-60deg);
+	
+
 }
 .hexagon-in2 {
-	/* background-color: rgba(255, 255, 255, 1); */
+	background-color: rgb(255, 255, 255);
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
 	background-position: 50%;
-	background-size: 40%;
-    background-image: url(./assets/icons/ML.svg);
     visibility: visible;
     -webkit-transform: rotate(-60deg);
        -moz-transform: rotate(-60deg);
         -ms-transform: rotate(-60deg);
          -o-transform: rotate(-60deg);
-            transform: rotate(-60deg);
+			transform: rotate(-60deg);
 }
+
+.hexagon-in2 p {
+	text-align: center;
+	position: relative;
+	top: 50%;
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+	color: black;
+	font-size: 32px;
+}
+
+
 
 .Project{
 	cursor: pointer;
+	margin-top: 25px;
+	margin-bottom: 25px;
 }
 
+#tsparticles{
+	/* width: 100%;
+	height: 100%; */
+}
+
+.BackgroundParticles{
+	display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
 
