--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,11 @@ header{
   	top: 10%;
   	left: 50%;
   	transform: translateX(-50%) translateY(-10%);
-	  text-align: center;
-	  /* background-color: blue; */
+	text-align: center;
 }
 
 header h1 {
 	font-size: calc(30px + 1.5vw);
-	/* 66px */
 	font-weight: lighter;
 	letter-spacing: 4px;
 }
@@ -40,7 +38,8 @@ header p {
 
 
 .Body{
-	width: 100%;
+    width: 100%;
+    padding-bottom: 1px;
 }
 
 .Body .Section{
@@ -109,7 +108,7 @@ div#Skills.Section{
 
 }
 .hexagon-in2 {
-	background-color: rgb(255, 255, 255);
+    background: rgba(255,255,255, 0.7);
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
@@ -134,23 +133,41 @@ div#Skills.Section{
 }
 
 
-
 .Project{
 	cursor: pointer;
 	margin-top: 25px;
 	margin-bottom: 25px;
 }
 
-#tsparticles{
-	/* width: 100%;
-	height: 100%; */
+#grow {
+    -moz-transition: height .5s;
+    -ms-transition: height .5s;
+    -o-transition: height .5s;
+    -webkit-transition: height .5s;
+    transition: height .5s;
+    height: 0;
+    overflow: hidden;
+  }
+
+#more-button{border-style:none;background:none;font:16px Serif;color:blue;margin: 0 0 10px 0;}
+
+
+div#Footer.Section{
+	width: 80%;
+    max-width: 500px;
+    text-align: center;
+    background-color: rgba(255,255,255, 0.9);
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
 }
 
-.BackgroundParticles{
-	display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+.icon{
+    padding: 10px;
 }
-
+#git{
+    width: 500px !important;
+}
+.icon img{
+    width: 50px;
+}
