--- a/src/index.css
+++ b/src/index.css
@@ -78,8 +78,8 @@ div#Skills.Section{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 100px;
-	height: 100px;
+	width: 125px;
+	height: 125px;
 	border-radius: 50%;
 	object-fit: cover;
 }
@@ -108,7 +108,7 @@ div#Skills.Section{
 
 }
 .hexagon-in2 {
-    background: rgba(255,255,255, 0.7);
+    background: rgb(255,255,255);
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
