--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ header{
 	text-align: center;
 }
 
-header h1 {
+header .ml11 .letters {
 	font-size: calc(30px + 1.5vw);
 	font-weight: lighter;
 	letter-spacing: 4px;
@@ -187,3 +187,38 @@ div#Footer.Section{
 .icon img{
     width: 50px;
 }
+
+
+
+.ml11 {
+	font-weight: 700;
+	font-size: 3.5em;
+  }
+  
+  .ml11 .text-wrapper {
+	position: relative;
+	display: inline-block;
+	padding-top: 0.1em;
+	padding-right: 0.05em;
+	padding-bottom: 0.15em;
+  }
+  
+  .ml11 .line {
+	opacity: 0;
+	position: absolute;
+	left: 0;
+	height: 100%;
+	width: 3px;
+	background-color: #fff;
+	transform-origin: 0 50%;
+  }
+  
+  .ml11 .line1 { 
+	top: 0; 
+	left: 0;
+  }
+  
+  .ml11 .letter {
+	display: inline-block;
+	line-height: 1em;
+  }
