--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,13 @@ header{
   	width: 90%;
   	max-width: 650px;
 	position: absolute;
-  	top: 10%;
+  	top: 13%;
   	left: 50%;
   	transform: translateX(-50%) translateY(-10%);
 	text-align: center;
 }
 
-header .ml11 .letters {
+header h1 {
 	font-size: calc(30px + 1.5vw);
 	font-weight: lighter;
 	letter-spacing: 4px;
