--- a/src/Styles/General.css
+++ b/src/Styles/General.css
@@ -10,9 +10,11 @@ body, html{
 	background-color: black;
   	height: 100%;
 	width: 100%;
+	margin: 0;
 }
 p {
 	font-size: calc(12px + 0.3vw);
+	text-align: justify;
 }
 
 hr {
